[package]
name = "pastebin"
version = "0.1.0"
authors = ["Adrian Sadłocha <adrian@sadlocha.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"
